logs/pyy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyy'...
Listing './lib/python3.5/site-packages/pyy/html'...
Compiling './lib/python3.5/site-packages/pyy/html/document.py'...
***   File "./lib/python3.5/site-packages/pyy/html/document.py", line 33
    print 'document'
                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyy/server'...
Compiling './lib/python3.5/site-packages/pyy/server/http.py'...
***   File "./lib/python3.5/site-packages/pyy/server/http.py", line 94
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/server/httpserver.py'...
***   File "./lib/python3.5/site-packages/pyy/server/httpserver.py", line 141
    except httperror, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/server/server.py'...
***   File "./lib/python3.5/site-packages/pyy/server/server.py", line 51
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/server/threadio.py'...
***   File "./lib/python3.5/site-packages/pyy/server/threadio.py", line 36
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/server/threadserver.py'...
***   File "./lib/python3.5/site-packages/pyy/server/threadserver.py", line 73
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyy/tests'...
Listing './lib/python3.5/site-packages/pyy/tests/html'...
Listing './lib/python3.5/site-packages/pyy/tests/server'...
Compiling './lib/python3.5/site-packages/pyy/tests/test.py'...
***   File "./lib/python3.5/site-packages/pyy/tests/test.py", line 41
    print 'INVALID MODULE: %s.' % arg
                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyy/tests/web'...
Listing './lib/python3.5/site-packages/pyy/tests/web/test'...
Listing './lib/python3.5/site-packages/pyy/tests/web/test/admin'...
Listing './lib/python3.5/site-packages/pyy/web'...
Compiling './lib/python3.5/site-packages/pyy/web/cgi.py'...
***   File "./lib/python3.5/site-packages/pyy/web/cgi.py", line 72
    print 'Status: %d %s' % (res.statusnum, res.statusmsg)
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/web/url.py'...
***   File "./lib/python3.5/site-packages/pyy/web/url.py", line 142
    print url()
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyy/web/wsgi.py'...
***   File "./lib/python3.5/site-packages/pyy/web/wsgi.py", line 19
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyy-1.1.16.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
